test('no stdin', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdin.sh')], env: test_env, depends: all_test_txt)
test('no stdout', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdout.sh')], env: test_env, depends: all_test_txt)
test('no stderr', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stderr.sh')], env: test_env, depends: all_test_txt)
test('no stdout/stderr', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdout-stderr.sh')], env: test_env, depends: all_test_txt)
test('no stdin/stdout', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdin-stdout.sh')], env: test_env, depends: all_test_txt)
test('no stdin/stderr', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdin-stderr.sh')], env: test_env, depends: all_test_txt)
test('no stdin/stdout/stderr', default_signal_handlers, suite: 'stdio', args: [bash, files('no-stdin-stdout-stderr.sh')], env: test_env, depends: all_test_txt)

test('fcntl() failure', default_signal_handlers, suite: 'stdio', args: [bash, files('fcntl-failure.sh')], env: test_env, depends: all_test_txt)
test('open() failure', default_signal_handlers, suite: 'stdio', args: [bash, files('open-failure.sh')], env: test_env, depends: all_test_txt)
test('dup2() failure', default_signal_handlers, suite: 'stdio', args: [bash, files('dup2-failure.sh')], env: test_env, depends: all_test_txt)
test('close() failure', default_signal_handlers, suite: 'stdio', args: [bash, files('close-failure.sh')], env: test_env, depends: all_test_txt)
